@@ -1,8 +1,8 @@
 DIST renderdoc-1.10.tar.gz 43023048 SHA256 6200099987c7cfc52360d24845742883dcfe6cb31b71c6f85372a543a9608486 SHA512 181934d5eac179451e0e9e708960d119b33184ba6ab81db504144709ecb47e8abb8543d3f32267ba3804751613bc7003480e2eab7b66af63aeb4b2b1329f3cbf WHIRLPOOL 6ec8694b6f0973a78a2142621490e6a6b638d9ec1d7d6202efb1a219e495fbfbf9003c37ca690fe2d21544c775cc7b089dbe2cf37f3f713537fc268a12ced1b9
-DIST renderdoc-1.11.tar.gz 43407807 SHA256 71afd16348df431473aa231c9e01cc3a27eff7ae9f1e8b3a87ad68271e8b8277 SHA512 cd55a2f63ad2c1d8195f4df2450a04053c5f1b4edbe29c79d6dead90053cb5db3a8a6835c9cfd11db32c26ba8e3137213ba77d1874352971cae08126e8c03582 WHIRLPOOL 4e6868ebaed53cd6e876edf81532bd5fd3e3410338315f01564a1a7b7a473d9530702d70e5ec28044be0dd0d8956bc9605e6288c27b1ecea2c0cd55162659243
+DIST renderdoc-1.12.tar.gz 43554566 SHA256 4dece1b4cb859a76533b28fcd50e17321acfaa81c3435500a006c4a5ba15fddb SHA512 29ed5edbba8d0fdbac2f1ecaa148edd030bf1ab26da522c983ff21962bfaf6fb3252e02a4e3555834b757f2eb05e894729f01c8acc734f929c1b2bf972c6172e WHIRLPOOL 35f7a649b0d50132772271ad9bca6438ea308850e5a5fe13d22c7ff4e40303e2c50594ffaa47708e60edab91c3eee4e0166aa67008b3662fce7a67e4b49fc2c2
 DIST renderdoc_swig_modified-7.zip 6015823 SHA256 9d7e5013ada6c42ec95ab167a34db52c1cc8c09b89c8e9373631b1f10596c648 SHA512 78e66e7da0a6632a0f1e6ca0b38b7331fac8921b0d82d42ec21b281f19ff1c9b1ea182c80c52585dceef2e7444777340eedcbda80ac05563da8b892b446f9596 WHIRLPOOL f76ed018f761ff13053c6e6045f9dde374761cd278b502a0b403b7024b17e39c32cb481fe366f90c0a7fc9114b7dc721278bdb5488f0fa4b2dede443dc5771b9
 EBUILD renderdoc-1.10.ebuild 1258 SHA256 726243def2f704cb336d5c7f986d952e61bc567bfbce67c910ac2a14b5b51b70 SHA512 31b8c4e096a86455ce0e56cea20cc001d9fc42f36bf8488556966e713095549cfc1a04e6c6b469ad31221fe8af545d21f024d56d77967d90cccdb8c14f15e227 WHIRLPOOL a77fdec38443f0e0e0da897e5d7e6c1732b5cfc6649771b3c6ad9072efe980bf20ddade3a649d4574bf25c7d336e6d81a4f493aa33359ca438c9c95ae1961abb
-EBUILD renderdoc-1.11.ebuild 1288 SHA256 d56cd9b02d018553d38dff4d71ad98f36f7685b89f4c86695fdbf06891ab933b SHA512 9fff9b4e5fe54b2c39d7522581102d60458b7f98e9ed4aef5c6fa68a2915922ada89db8603932241b03410fa8f53f8f794a9af0beaf5c823c6511cc133afd8bd WHIRLPOOL 36ba8cdd11c47246ff14a6f4d9b23cb9abdf975529e4421911f8ba6c984132aa9d755d7002d9e9e92e1cef8629720c4d24ab976a741de6e42aaaadc3b11ba53f
+EBUILD renderdoc-1.12.ebuild 1490 SHA256 24012139494a4107e6aa217356d9d0908878b170495036db467a136da2385ab5 SHA512 ffa50da6b4fee1918fc895e0f9d7e1dfd1a24c30f52f224f0867873607989c45189b92b4e149ea16cba0e56dd95ce15c95af5290078d82cfb7f76e78cedeb76d WHIRLPOOL 05c96271401cdd8e69da0c88433e300130ea9d9ecbc0a24dcbc93413fadafdc730c022b38fda50f469094815ce0572e60260cdc4e3683c2cf6895d9728867ac1
 EBUILD renderdoc-9999.ebuild 1143 SHA256 812b513a6295a0f231a47ce45a00f14e14c80b3b4d7c1c3b4fd88a5de11247ea SHA512 b429eb9061db1cd1ec6410068329bbdaeb4cdfc5e4ccef854e81443ca31859b6c9d5c860a4c3cfc93b23ea74e2928c5cb21e5fd953bcf440999875f4306f1f3d WHIRLPOOL c7693b0a9913e532ea50cccb02270d9802700eb2f6d87c0a4b7d308fe99ca2f0e751565833bfcc2eaa47ff2666c4b410851af145199f0bc8266749fd686cb90e
-MISC ChangeLog 2088 SHA256 da5d1e0439adf07e3aebe51b059775ed597dc97f446a0b87ca49a259b1cde2df SHA512 6c456372011d8b6a8493d3bdae4770e6c946f8f411ded9c0a84a398989b7e94c9ca2ed377604a34d05a24a429052adb969b83a72404b5208401511ccca7def19 WHIRLPOOL fbeee6343e73341cb562edf432e33555c2b00559636359390590dc6d8fd2d45a4ba1d1066046458087ca756e1ac8a42ef2de91583260d8e13865c23a05de20e5
+MISC ChangeLog 2385 SHA256 dc201609c31af2df24ea0c9d11e5e96bc68776de5a1b392eac7f30d21c8d9c15 SHA512 a0932c80e4f0b16790cb2be104d43aec57a2cbaba49b551a8674d6e8dc16a170168a48e2480bc23f9d1384eebd752a0d3cd16a0fa0630ad0fdadf15cec9d7180 WHIRLPOOL 7b09c8ef72e98e0cadd8862affb2124bf5c04902a513cbc360feff503b87c5f6cf3b1ceb7045857be09dd22a6c4545c0a68aac9d6cb3ad5317ac353c8724ab6b
 MISC metadata.xml 617 SHA256 e9fbacbe415bc07df43e7f8e712ab879f7cdd471e7fb8eca804494103418b8fc SHA512 4cad8316dce107b2cd7e7eb426a106388563955c5ba333b1fcb024c4265c0d7b2fca78dcb2abdfd737fb8fe06066af22a3fec7d0db66870ba2f6739e7b9bea77 WHIRLPOOL 094c37a0562e2f09d9998d06d4917b474f599a57804a09300dba83e3fe8d489e4781d2d5924208fccb1bdea866fd42cac7abae9f72083284f24b8bb75e1d5a83
