@@ -1,3 +1,11 @@
+*renderdoc-1.12 (21 Feb 2021)
+
+  21 Feb 2021; AzP <peterasplund@gentoo.se> +renderdoc-1.12.ebuild,
+  -renderdoc-1.11.ebuild:
+  dev-util/renderdoc:   Version bump to v1.12. Removal of broken v1.11. Add
+  calls to update mime-databases, et al.  Signed-off-by: Peter Asplund
+  <peter.azp@gmail.com>
+
 *renderdoc-1.11 (20 Feb 2021)
 
   20 Feb 2021; AzP <peterasplund@gentoo.se> +renderdoc-1.11.ebuild,
